--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,3 +13,5 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
+@import 'blocks/titles';
+@import 'blocks/advantages';
