--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -4,4 +4,9 @@
     font-weight: 700;
     font-size: 30px;
     color: #0D0D0D;
+    &_left {
+        font-size: 36px;
+        text-align: left;
+        color: #FFFFFF;
+    }
 }
