Added styles of the footer block

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,6 +21,7 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/comment';
+@import 'blocks/footer';
 
 //Media import
 @import 'media/carousel.media'
