--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,6 +9,10 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    transition: 0.5s all;
+    &:hover {
+        box-shadow: 2px 2px 15px #ffffff;
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
