--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,7 @@
 @import 'blocks/catalog';
 @import 'blocks/comment';
 @import 'blocks/footer';
+@import 'blocks/modal';
 
 //Media import
 @import 'media/carousel.media'
