Added files of media queries

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,4 +25,12 @@
 @import 'blocks/modal';
 
 //Media import
-@import 'media/carousel.media'
+@import 'media/carousel.media';
+@import 'media/header.media';
+@import 'media/promo.media';
+@import 'media/advantages.media';
+@import 'media/consultation.media';
+@import 'media/comment.media';
+@import 'media/catalog.media';
+@import 'media/footer.media';
+@import 'media/modal.media';
