--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -17,6 +17,7 @@
         margin-top: 35px;
         font-weight: 700;
         font-size: 18px;
+        text-align: center;
         color: #0D0D0D;
     }
     &__description {
