Added transition to the main page

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,6 +23,7 @@
 @import 'blocks/comment';
 @import 'blocks/footer';
 @import 'blocks/modal';
+@import 'blocks/pageup';
 
 //Media import
 @import 'media/carousel.media';
