--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -5,27 +5,23 @@
     width: 750px;
     margin: 0 auto;
 }
-  .prev, .next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: -66px;
-    border: none;
-    background-color: #fff;
-    img {
-        width: 31px;
-        height: 50px;
-    }
-  }
-  .next {
-    right: -66px;
-    left: auto;
-  }
-  .tns-item {
-    img {
-      display: block;
+.prev, .next {
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -66px;
+  border: none;
+  outline: 0;
+  background-color: #fff;
+  img {
       margin: 0 auto;
-    }
+      width: 31px;
+      height: 50px;
   }
 }
-
+.next {
+  right: -66px;
+  left: auto;
+}
+}
