--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,10 @@
     margin: 0 auto;
 }
 
+button {
+    outline: 0;
+}
+
 @import 'base/variables';
 @import 'blocks/promo';
 @import 'blocks/header';
